--- a/index.html
+++ b/index.html
@@ -10,79 +10,96 @@
         <meta name="description" content="Mastering the Basics: Essential HTML and CSS">
 
         <title>Dawg Pizza</title>
-        <link rel="stylesheet" type="text/css" href="css/normalize.css">
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
         <link rel="stylesheet" type="text/css" href="css/main.css">
         <link rel="icon" href="img/pizza-icon.png">
     </head>
     <body>
-        <main class="container">
-            <header>
+        <main class="container-fluid">
+            <header ="jumbotron">
                 <h1>Dawg Pizza</h1>
-                <p>Feeding Hungry Huskies since 2013</p>
+                <p class="motto">Feeding Hungry Huskies since 2013</p>
+                <nav role="navigation">
+                    <ul>
+                        <li><a href="#location">location</a></li>
+                        <li><a href="#menu">menu</a></li>
+                        <li><a href="#about">about</a></li>
+                    </ul>
+                </nav>
             </header>
 
-            <section class="general"> 
-                <h2>Address</h2>
-                <P><a href="https://goo.gl/maps/CKrRF">4925 University Way NE<br>Seattle, WA 98105</a><p>
+            <section class="row general">
+                <div class="col-md-4 co;-mdd-6">
+                    <h2>Address</h2>
+                    <P><a href="https://goo.gl/maps/CKrRF">4925 University Way NE<br>Seattle, WA 98105</a><p>
+                </div>
 
-                <h2>Hours</h2>
-                <p>Open daily from noon to midnight</p>
+                <div class="col-md-4 col-mdd-4">
+                    <h2>Hours</h2>
+                    <p>Open daily from noon to midnight</p>
+                </div>
+                <div class="col-md-4 col-mdd-2">
+                    <h2>To Order</h2>
+                    <p>Call us at <a href="tel:+2065551212">206-555-1212</a></p></div>
 
-                <h2>To Order</h2>
-                <p>Call us at <a href="tel:+2065551212">206-555-1212</a></p>
             </section>
 
-            <section class="menu"> 
+            <section class="row menu">
                 <h2>Our Menu</h2>
-                <h3>Meat Pies</h3>
-                <dl>
-                    <dt>Bacon &amp; Pinepple</dt>
-                    <dd>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-                    tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-                    quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-                    consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-                    cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-                    proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</dd>
-                    <dt>Duck, Duck, Goose</dt>
-                    <dd>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-                    tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-                    quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-                    consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-                    cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-                    proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</dd>
-                    <dt>The Bambi</dt>
-                    <dd>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-                    tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-                    quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-                    consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-                    cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-                    proident, sunt in culpa qui officia deserunt mollit anim id est laborum.   </dd>
-                </dl>
+                <div class="col-md-6">
+                    <h3>Meat Pies</h3>
+                    <dl>
+                        <dt>Bacon &amp; Pinepple</dt>
+                        <dd>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+                            tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+                            quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+                            consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+                            cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+                            proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</dd>
+                        <dt>Duck, Duck, Goose</dt>
+                        <dd>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+                            tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+                            quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+                            consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+                            cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+                            proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</dd>
+                        <dt>The Bambi</dt>
+                        <dd>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+                            tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+                            quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+                            consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+                            cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+                            proident, sunt in culpa qui officia deserunt mollit anim id est laborum.   </dd>
+                    </dl>
+                </div>
 
-                <h3>Veggie Pies</h3>
-                <dl>
-                    <dt>Forest Floor</dt>
-                    <dd>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-                    tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-                    quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-                    consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-                    cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-                    proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</dd>
-                    <dt>Green Monster</dt>
-                    <dd>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-                    tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-                    quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-                    consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-                    cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-                    proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</dd>
-                    <dt>Caprese</dt>
-                    <dd>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-                    tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-                    quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-                    consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-                    cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-                    proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</dd>
-                </dl>
+                <div class="col.me-6">
+                    <h3>Veggie Pies</h3>
+                    <dl>
+                        <dt>Forest Floor</dt>
+                        <dd>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+                            tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+                            quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+                            consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+                            cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+                            proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</dd>
+                        <dt>Green Monster</dt>
+                        <dd>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+                            tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+                            quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+                            consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+                            cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+                            proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</dd>
+                        <dt>Caprese</dt>
+                        <dd>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+                            tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+                            quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+                            consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+                            cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+                            proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</dd>
+                    </dl>
+                </div>
+
             </section>
 
             <section class="about"> 
