--- a/index.html
+++ b/index.html
@@ -29,19 +29,18 @@
             </header>
 
             <section class="row general">
-                <div class="col-md-4 co;-mdd-6">
+                <div class="col-md-4">
                     <h2>Address</h2>
                     <P><a href="https://goo.gl/maps/CKrRF">4925 University Way NE<br>Seattle, WA 98105</a><p>
                 </div>
 
-                <div class="col-md-4 col-mdd-4">
+                <div class="col-md-4">
                     <h2>Hours</h2>
                     <p>Open daily from noon to midnight</p>
                 </div>
-                <div class="col-md-4 col-mdd-2">
+                <div class="col-md-4">
                     <h2>To Order</h2>
                     <p>Call us at <a href="tel:+2065551212">206-555-1212</a></p></div>
-
             </section>
 
             <section class="row menu">
