--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
     </head>
     <body>
         <main class="container-fluid">
-            <header ="jumbotron">
+            <header>
                 <h1>Dawg Pizza</h1>
-                <p class="motto">Feeding Hungry Huskies since 2013</p>
+                <p class="tagline">Feeding Hungry Huskies since 2013</p>
                 <nav role="navigation">
                     <ul>
                         <li><a href="#location">location</a></li>
@@ -29,6 +29,7 @@
             </header>
 
             <section class="row general">
+                <a name = "location"> </a> 
                 <div class="col-md-4">
                     <h2>Address</h2>
                     <P><a href="https://goo.gl/maps/CKrRF">4925 University Way NE<br>Seattle, WA 98105</a><p>
@@ -44,6 +45,7 @@
             </section>
 
             <section class="row menu">
+                <a name = "menu"> </a> 
                 <h2>Our Menu</h2>
                 <div class="col-md-6">
                     <h3>Meat Pies</h3>
@@ -101,7 +103,8 @@
 
             </section>
 
-            <section class="about"> 
+            <section class="about">
+                <a name = "about"> </a> 
                 <h2>About Us</h2>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
                 tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
