--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     </head>
     <body>
         <main class="container-fluid">
-            <header>
+            <header class="row rabbit">
                 <h1>Dawg Pizza</h1>
                 <p class="tagline">Feeding Hungry Huskies since 2013</p>
                 <nav role="navigation">
@@ -121,7 +121,7 @@
                 proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>                
             </section>
 
-            <footer>
+            <footer class="row">
                 <p><i>&copy; 2014, Dawg Pizza, <a href="mailto:info@dawgpizza.com">info@dawgpizza.com</i></p>
                 <p><a href= "#top">Back to Top &uarr;</a> </p>
             </footer>
