--- a/index.html
+++ b/index.html
@@ -2,7 +2,6 @@
 <!doctype html>
 <html lang="en">
     <head>
-        <a name = "top"> </a>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -12,7 +11,7 @@
         <title>Dawg Pizza</title>
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
         <link rel="stylesheet" type="text/css" href="css/main.css">
-        <link rel="icon" href="img/pizza-icon.png">
+        <link rel="shortcut icon" href="img/pizza-icon.png">
     </head>
     <body>
         <main class="container-fluid">
@@ -29,7 +28,7 @@
             </header>
 
             <section class="row general">
-                <a name = "location"> </a> 
+                <a id="location"> </a> 
                 <div class="col-md-4">
                     <h2>Address</h2>
                     <P><a href="https://goo.gl/maps/CKrRF">4925 University Way NE<br>Seattle, WA 98105</a><p>
@@ -45,7 +44,7 @@
             </section>
 
             <section class="row menu">
-                <a name = "menu"> </a> 
+                <a id="menu"> </a> 
                 <h2>Our Menu</h2>
                 <div class="col-md-6">
                     <h3>Meat Pies</h3>
@@ -104,7 +103,7 @@
             </section>
 
             <section class="about">
-                <a name = "about"> </a> 
+                <a id="about"> </a> 
                 <h2>About Us</h2>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
                 tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
@@ -123,7 +122,7 @@
 
             <footer class="row">
                 <p><i>&copy; 2014, Dawg Pizza, <a href="mailto:info@dawgpizza.com">info@dawgpizza.com</i></p>
-                <p><a href= "#top">Back to Top &uarr;</a> </p>
+                <p><a href= #>Back to Top &uarr;</a> </p>
             </footer>
         </main>
 
